<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.grappus.digitan.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:customFont="@string/font_regular" />

    <com.grappus.digitan.custom.CustomTextView
        style="@style/stye_text_one"
        android:text="@string/you_have_recorded_a_total_of_8_hours_today"
        app:customFont="@string/font_regular" />

    <com.grappus.digitan.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/update_timesheet"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:customFont="@string/font_regular" />

</LinearLayout>