<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.grappus.digitan.slides.Slide2FragmentHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingStart="38dp"
            android:paddingEnd="38dp">

            <include layout="@layout/common_header" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_outBoxy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/outboxy"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:background="@drawable/xml_round_rect"
                        android:onClick="@{()->handler.onOutBoxyTimeClicked()}"
                        android:orientation="horizontal"
                        android:padding="9dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_outBoxy">

                        <com.grappus.digitan.custom.CustomEditText
                            android:id="@+id/etOutboxy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:clickable="false"
                            android:inputType="number"
                            android:maxLength="2"
                            android:minWidth="3dp"
                            android:text="@string/two"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular"
                            tools:text="2" />

                        <com.grappus.digitan.custom.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/char_h"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_drift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/drift"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:background="@drawable/xml_round_rect"
                        android:onClick="@{()->handler.onDriftPilotTimeClicked()}"
                        android:orientation="horizontal"
                        android:padding="9dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_drift">

                        <com.grappus.digitan.custom.CustomEditText
                            android:id="@+id/etDrift"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:clickable="false"
                            android:inputType="number"
                            android:maxLength="2"
                            android:minWidth="3dp"
                            android:text="@string/two"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular"
                            tools:text="2" />

                        <com.grappus.digitan.custom.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/char_h"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_grappus_internal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/grappus_internal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:background="@drawable/xml_round_rect"
                        android:onClick="@{()->handler.onGrappusInternalTimeClicked()}"
                        android:orientation="horizontal"
                        android:padding="9dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_grappus_internal">

                        <com.grappus.digitan.custom.CustomEditText
                            android:id="@+id/etGrappusIntrernal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:clickable="false"
                            android:inputType="number"
                            android:maxLength="2"
                            android:minWidth="3dp"

                            android:text="@string/two"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular"
                            tools:text="2" />

                        <com.grappus.digitan.custom.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/char_h"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:customFont="@string/font_regular" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>
