<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.grappus.digitan.slides.Slide1FragmentHandler" />

        <variable
            name="data"
            type="com.grappus.digitan.SlidesBindingModel" />

        <import type="android.view.View" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingStart="38dp"
            android:paddingEnd="38dp">

            <include layout="@layout/common_header" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_outBoxy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/outboxy"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_outboxy"
                        style="@style/style_et_time_slide"
                        android:text="@{data.currentOutBoxyTimeText}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_outBoxy"
                        tools:text="2h" />

                    <ImageView
                        style="@style/style_action_button_start"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustOutBoxyTime(false)}"
                        android:src="@drawable/ic_minus"
                        app:layout_constraintEnd_toStartOf="@id/tv_time_outboxy"
                        app:layout_constraintTop_toBottomOf="@id/tv_outBoxy" />

                    <ImageView
                        style="@style/style_action_button_slide_one"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustOutBoxyTime(true)}"
                        android:src="@drawable/ic_plus_round"
                        app:layout_constraintStart_toEndOf="@id/tv_time_outboxy"
                        app:layout_constraintTop_toBottomOf="@id/tv_outBoxy"
                        tools:ignore="RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_drift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/drift"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_drift"
                        style="@style/style_et_time_slide"
                        android:text="@{data.currentDriftPilotTimeText}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_drift"
                        tools:text="2h" />

                    <ImageView
                        style="@style/style_action_button_start"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustDriftPilotTime(false)}"
                        android:src="@drawable/ic_minus"
                        app:layout_constraintEnd_toStartOf="@id/tv_time_drift"
                        app:layout_constraintTop_toBottomOf="@id/tv_drift" />

                    <ImageView
                        style="@style/style_action_button_slide_one"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustDriftPilotTime(true)}"
                        android:src="@drawable/ic_plus_round"
                        app:layout_constraintStart_toEndOf="@id/tv_time_drift"
                        app:layout_constraintTop_toBottomOf="@id/tv_drift" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="35dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_grappus_internal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/grappus_internal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_grappus_internal"
                        style="@style/style_et_time_slide"
                        android:text="@{String.format(@string/hours_spent, data.currentGrappusInternalTime)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_grappus_internal"
                        tools:text="2h" />

                    <ImageView
                        style="@style/style_action_button_start"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustGrappusInternalTime(false)}"
                        android:src="@drawable/ic_minus"
                        app:layout_constraintEnd_toStartOf="@id/tv_time_grappus_internal"
                        app:layout_constraintTop_toBottomOf="@id/tv_grappus_internal" />

                    <ImageView
                        style="@style/style_action_button_slide_one"
                        android:contentDescription="@null"
                        android:onClick="@{()->handler.adjustGrappusInternalTime(true)}"
                        android:src="@drawable/ic_plus_round"
                        app:layout_constraintStart_toEndOf="@id/tv_time_grappus_internal"
                        app:layout_constraintTop_toBottomOf="@id/tv_grappus_internal" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>