<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.grappus.digitan.Slide3BindingModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingStart="38dp"
            android:paddingEnd="38dp">

            <include layout="@layout/common_header" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="23dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_outBoxy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/outboxy"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <SeekBar
                        android:id="@+id/outboxySeekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:background="@null"
                        android:max="24"
                        android:minHeight="5dp"
                        android:paddingStart="41dp"
                        android:paddingEnd="41dp"
                        android:progress="2"
                        android:progressBackgroundTint="@color/white52"
                        android:progressTint="@color/white"
                        android:thumb="@drawable/ic_knob"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_outBoxy" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_outboxy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@{data.currentOutBoxyTimeText}"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/outboxySeekbar"
                        tools:text="2h" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="23dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_drift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/drift"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <SeekBar
                        android:id="@+id/driftPilotSeekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:background="@null"
                        android:max="24"
                        android:minHeight="5dp"
                        android:paddingStart="41dp"
                        android:paddingEnd="41dp"
                        android:progress="2"
                        android:progressBackgroundTint="@color/white52"
                        android:progressTint="@color/white"
                        android:thumb="@drawable/ic_knob"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_drift" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_drift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@{data.currentDriftPilotTimeText}"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/driftPilotSeekbar"
                        tools:text="2h" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="@color/white20"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingBottom="23dp">

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_grappus_internal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/grappus_internal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:customFont="@string/font_regular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <SeekBar
                        android:id="@+id/grappusInternalSeekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:max="24"
                        android:minHeight="5dp"
                        android:paddingStart="41dp"
                        android:paddingEnd="41dp"
                        android:progress="2"
                        android:progressBackgroundTint="@color/white52"
                        android:progressTint="@color/white"
                        android:thumb="@drawable/ic_knob"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_grappus_internal" />

                    <com.grappus.digitan.custom.CustomTextView
                        android:id="@+id/tv_time_grappus_internal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@null"
                        android:text="@{data.currentGrappusInternalTimeText}"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/grappusInternalSeekbar"
                        tools:text="2h" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</layout>